<resources>
    <string name="app_name">数字商城</string>
    <string name="app_version">V1.0.0</string>

    <!--description-->
    <string name="app_description">数字商城应用</string>

    <!--toolbar标签-->
    <string name="label_select_function_activity">功能选择界面</string>

    <!--action菜单功能-->
    <string name="action_message">我的消息</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friends">添加朋友</string>
    <string name="action_contacts">通信录</string>
    <string name="action_setting">设置</string>

    <!--侧滑栏打开或者关闭-->
    <string name="drawer_layout_open">打开</string>
    <string name="drawer_layout_close">关闭</string>

    <!--活动：关于软件-->
    <string name="about_copy_right">Copyright © 2000-2017 Suntront \n All rights reserved.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!--MainActivity文字-->
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_wallet">钱包</string>
    <string name="main_navigation_qr">扫码</string>
    <string name="main_navigation_friends">朋友</string>
    <string name="main_navigation_person">我的</string>
    <string name="main_navigation_shopping_cart">购物车</string>
    <string name="test1">66666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        666666666666666666666666666666666666666666666666666666666666
        6666666666666666666</string>

</resources>
