<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_navigation_home"/>

    <item
        android:id="@+id/main_navigation_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/main_navigation_wallet"/>

    <item
        android:id="@+id/main_navigation_friends"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:title="@string/main_navigation_friends"/>

    <item
        android:id="@+id/main_navigation_shopping_cart"
        android:icon="@drawable/ic_add_shopping_cart_white_24dp"
        android:title="@string/main_navigation_shopping_cart"/>

    <item
        android:id="@+id/main_navigation_person"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/main_navigation_person"/>

</menu>
